inline elements updates

--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
 	github notes
 	create repo, add and remove files in github and gitbash
 
-	Thursday:
-	styling of inline elements
+	Friday:
+	styling of inline elements - add files to repo
+	page navigation
 	How to install google fonts in your web project?
-	Add few more block level elements - header, hgroup, main, nav, section, footer
+	What is em, px, %?
+	generate fonts using icomoon
+	use fontawesome fonts in web project
+	Add few more block level elements with examples - header, hgroup, main, nav, section, footer
 	H1 - H6 tags with default styles
 	paragraph [who could be its parent and child?]
 	div [who could be its parent and child?]
@@ -38,7 +42,7 @@
 	video tag, audio tag, embed, iframe, map, object, param, picture, source, track
 
 	
-	Friday:
+	Monday:
 	forms 
 	inputs
 	table
