--- a/index.html
+++ b/index.html
@@ -6,11 +6,36 @@
 	<meta name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no">
 	<meta name="author" content="description">
 	<title>Notes</title>
-	<link rel="stylesheet" href="css/normalize.css" />
+	<!-- <link rel="stylesheet" href="css/normalize.css" /> -->
+	<style>
+		body{
+			font-size: 120%;
+		}
+		.para{
+			font-size: 1em;
+		}
+	</style>
 </head>
-<body>
 
-	Monday:
+<body>
+ <div>
+ 	<h2>heading tag 2</h2>
+ 	<h3>heading tag 3</h3>
+ 	<p class="para">
+ 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis officiis maxime, neque, at numquam quae laudantium quidem. Asperiores voluptates accusantium tempora ipsa sit, natus esse consequatur eveniet et! Quasi qui obcaecati aspernatur nobis! Nemo pariatur, cumque eos nesciunt, nisi quia!
+ 	</p><!-- /.para -->
+ </div>
+
+</body>
+</html>
+
+
+
+
+
+
+
+	<!-- Monday:
 	question hour
 	Write basic structure in html with few meta tags
 	What are 2 diff attributes? Name them with examples
@@ -26,12 +51,12 @@
 	create repo, add and remove files in github and gitbash
 
 	Friday:
-	styling of inline elements - add files to repo
 	page navigation
 	How to install google fonts in your web project?
 	What is em, px, %?
 	generate fonts using icomoon
 	use fontawesome fonts in web project
+	what is normalize.css and reset.css
 	Add few more block level elements with examples - header, hgroup, main, nav, section, footer
 	H1 - H6 tags with default styles
 	paragraph [who could be its parent and child?]
@@ -48,7 +73,4 @@
 	table
 	few leftover elements
 	box mode block structure [margin, padding, content box]
-
-
-</body>
-</html>
+ -->
